# sklog

./: .gitignore  LICENSE  README.md  pyproject.toml
src/sklog/: __init__.py  _core.py
tests/: test_sklog.py
