[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[project]
name            = "sklog"
version         = "2.0.0"
description     = "Lightweight colored console logging with zero dependencies."
readme          = "README.md"
license         = { text = "MIT" }
authors         = [{ name = "shahil-sk" }]
requires-python = ">=3.8"

keywords = ["logging", "cli", "terminal", "color", "ansi"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Logging",
    "Topic :: Terminals",
]

# No runtime dependencies - pure stdlib.
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "build",
    "twine",
]

[project.urls]
Homepage   = "https://github.com/shahil-sk/sklog"
Repository = "https://github.com/shahil-sk/sklog"
Issues     = "https://github.com/shahil-sk/sklog/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/sklog"]

[tool.pytest.ini_options]
testpaths = ["tests"]